[gd_scene load_steps=24 format=3 uid="uid://qhrcubikyyej"]

[ext_resource type="Script" uid="uid://b4garg6o358ix" path="res://scripts/character_scripts/demon_knight.gd" id="1_kyw3d"]
[ext_resource type="PackedScene" uid="uid://dnylqglew4g6w" path="res://scenes/weapons/spear.tscn" id="2_bva5n"]
[ext_resource type="Texture2D" uid="uid://dcfoh30aseigg" path="res://vfx/character_sprites/demon_knight_portrait.png" id="2_dtou7"]
[ext_resource type="Texture2D" uid="uid://7xnwpp3uviln" path="res://vfx/character_sprites/demon_knight_tb_enemy.png" id="2_yk87n"]
[ext_resource type="AudioStream" uid="uid://bqx7ggghkh326" path="res://sfx/dknight_speech.ogg" id="4_dtou7"]
[ext_resource type="AudioStream" uid="uid://d1r5si5rna61c" path="res://sfx/dknight_hurt.ogg" id="4_yk7sw"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_270vp"]
albedo_color = Color(0.560784, 0.0392157, 0.14902, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_cuef7"]
material = SubResource("StandardMaterial3D_270vp")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kyw3d"]
albedo_color = Color(0.0768358, 0.0768358, 0.0768358, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_bva5n"]
material = SubResource("StandardMaterial3D_kyw3d")
top_radius = 0.0
bottom_radius = 0.2
height = 0.6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yk87n"]
albedo_color = Color(0.377919, 0.377919, 0.377919, 1)
metallic = 1.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_dtou7"]
material = SubResource("StandardMaterial3D_yk87n")
radius = 0.51
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ds2em"]

[sub_resource type="Animation" id="Animation_i7rtx"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spear:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.588632, 0.0908811, 0.187936)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spear:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Spear:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Spear:emit_sfx")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wjqdv"]
resource_name = "slash_attack_animation"

[sub_resource type="Animation" id="Animation_fih3v"]
resource_name = "slash_attack2_animation"

[sub_resource type="Animation" id="Animation_08dug"]
resource_name = "spear_attack1_animation"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spear:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.5, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.588632, 0.0908811, -0.410355), Vector3(0.588632, 0.0908811, -1.38746), Vector3(0.588632, 0.0908811, -0.410355)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spear:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Spear:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.5708, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Spear:emit_sfx")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_du2f1"]
resource_name = "spear lunge_attack2_animation"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spear:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.6, 0.8, 1.06667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.95719, 1.07271, 0.393638), Vector3(0.95719, 1.07271, 0.673194), Vector3(0.543777, 0.533891, -0.61947), Vector3(0.543777, 0.281381, -1.13977), Vector3(0.543777, 0.281381, -1.13977), Vector3(0.76752, 0.281381, -0.139773)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spear:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Spear:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.6, 0.8, 1.06667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-1.39213, 2.91927, -2.71821), Vector3(-1.45394, 2.79882, -2.59649), Vector3(-1.29974, 2.99471, -2.79552), Vector3(-0.83119, 3.08342, -2.89411), Vector3(-0.83119, 3.08342, -2.89411), Vector3(-1.5708, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Spear:emit_sfx")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_yk7sw"]
resource_name = "spear lunge_attack1_animation"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spear:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.45, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.588632, 0.0908811, -0.410355), Vector3(0.673605, -0.2908, 0.61254), Vector3(0.235885, 0.466105, -1.80526), Vector3(0.95719, 1.07271, 0.393638)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spear:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.35, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Spear:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.45, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-1.5708, 0, 0), Vector3(-1.29067, 0.0908269, 0), Vector3(-1.29067, 0.183591, 0), Vector3(-1.39213, 2.91927, -2.71821)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Spear:emit_sfx")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.35),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wjqdv"]
_data = {
&"RESET": SubResource("Animation_i7rtx"),
&"slash_attack1_animation": SubResource("Animation_wjqdv"),
&"slash_attack2_animation": SubResource("Animation_fih3v"),
&"spear lunge_attack1_animation": SubResource("Animation_yk7sw"),
&"spear lunge_attack2_animation": SubResource("Animation_du2f1"),
&"spear_attack1_animation": SubResource("Animation_08dug")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_08dug"]
gravity = Vector3(0, 0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i7rtx"]
transparency = 1
albedo_color = Color(1, 0.85098, 0, 0.607843)
emission_enabled = true
emission = Color(0.956863, 0.796078, 0, 1)
emission_energy_multiplier = 2.5
grow_amount = 0.5

[sub_resource type="TorusMesh" id="TorusMesh_wjqdv"]
material = SubResource("StandardMaterial3D_i7rtx")
inner_radius = 0.4
outer_radius = 0.5

[node name="demon_knight" type="CharacterBody3D"]
script = ExtResource("1_kyw3d")
Cname = "Demon Knight"
image = ExtResource("2_dtou7")
tb_sprite_enemy = ExtResource("2_yk87n")
hurt_sfx = ExtResource("4_yk7sw")
dialogue_sfx = ExtResource("4_dtou7")
lines = Array[String](["YOU WILL NOT REACH HIS MAJESTY!", "YOUR RAMPAGE ENDS HERE!"])
max_hp = 100

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_cuef7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(0.965926, -0.183013, -0.183013, 0.25, 0.842752, 0.476727, 0.0669873, -0.506236, 0.859789, -0.271456, 1, -0.34294)
mesh = SubResource("CylinderMesh_bva5n")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(0.909691, 0.37293, -0.182716, -0.249598, 0.842627, 0.477159, 0.331909, -0.388461, 0.859613, 0.271, 1, -0.343)
mesh = SubResource("CylinderMesh_bva5n")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.104521, 0)
mesh = SubResource("CapsuleMesh_dtou7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ds2em")

[node name="dialogue_sfx" type="AudioStreamPlayer3D" parent="."]

[node name="attack_sfx" type="AudioStreamPlayer3D" parent="."]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_max_distance = 10.01

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.165013, -0.986291, 0, 0.986291, 0.165013, 0, 0.708469, 0)
target_position = Vector3(0, -40, 0)

[node name="attack_timer" type="Timer" parent="."]

[node name="stun_timer" type="Timer" parent="."]

[node name="body_animation" type="AnimationPlayer" parent="."]

[node name="attack_animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wjqdv")
}
playback_default_blend_time = 0.3
blend_times = [&"RESET", &"RESET", 0.3]

[node name="Spear" parent="." instance=ExtResource("2_bva5n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.588632, 0.0908811, 0.187936)

[node name="attack_particles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25237, 0)
emitting = false
amount = 1
lifetime = 0.7
one_shot = true
process_material = SubResource("ParticleProcessMaterial_08dug")
draw_pass_1 = SubResource("TorusMesh_wjqdv")

[node name="attack_particle_timer" type="Timer" parent="attack_particles"]
wait_time = 0.7
one_shot = true

[connection signal="animation_finished" from="attack_animation" to="." method="_on_attack_animation_player_animation_finished"]
